@@ -1,42 +1,40 @@
 package com.desafio.agenciaviagem.services;
 
 import com.desafio.agenciaviagem.entities.Destination;
+import com.desafio.agenciaviagem.repositories.DestinationRepository;
 import org.springframework.stereotype.Service;
 
-import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class DestinationService {
 
-    private List<Destination> destinations = new ArrayList<>();
-    private Long nextId = 1L;
+    private final DestinationRepository destinationRepository;
+
+    public DestinationService(DestinationRepository destinationRepository) {
+        this.destinationRepository = destinationRepository;
+    }
 
     public Destination addDestination(Destination destination) {
-        destination.setId(nextId++);
         destination.setAverageRating(0.0);
         destination.setTotalRatings(0);
         destination.setRatingSum(0);
-        destinations.add(destination);
-        return destination;
+        return destinationRepository.save(destination);
     }
 
     public List<Destination> getAllDestinations() {
-        return destinations;
+        return destinationRepository.findAll();
     }
 
     public List<Destination> searchDestinations(String name, String location) {
-        return destinations.stream()
+        return destinationRepository.findAll().stream()
                 .filter(destination -> (name == null || destination.getName().contains(name)) &&
                         (location == null || destination.getLocation().contains(location)))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public Destination getDestinationById(Long id) {
-        return destinations.stream()
-                .filter(destination -> destination.getId().equals(id))
-                .findFirst()
+        return destinationRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("Destination not found"));
     }
 
@@ -44,14 +42,19 @@ public class DestinationService {
         if (rating < 1 || rating > 10) {
             throw new IllegalArgumentException("Rating must be between 1 and 10");
         }
+
         Destination destination = getDestinationById(id);
         destination.setRatingSum(destination.getRatingSum() + rating);
         destination.setTotalRatings(destination.getTotalRatings() + 1);
         destination.setAverageRating(destination.getRatingSum() / (double) destination.getTotalRatings());
-        return destination;
+
+        return destinationRepository.save(destination);
     }
 
     public void deleteDestination(Long id) {
-        destinations.removeIf(destination -> destination.getId().equals(id));
+        if (!destinationRepository.existsById(id)) {
+            throw new RuntimeException("Destination not found");
+        }
+        destinationRepository.deleteById(id);
     }
 }
